add option for sans-serif font

--- a/cv.tex
+++ b/cv.tex
@@ -32,6 +32,9 @@
 %	FONT
 %----------------------------------------------------------------------------------------
 
+% use sans-serif font
+% \renewcommand{\familydefault}{\sfdefault}
+% \usepackage{helvet}
 % % fontspec allows you to use TTF/OTF fonts directly
 % \usepackage{fontspec}
 % \defaultfontfeatures{Ligatures=TeX}
