--- a/cv.tex
+++ b/cv.tex
@@ -133,18 +133,21 @@
 
 %Interests/ Keywords/ Summary
 \section{Summary}
-Backend Engineer for seed-stage startup in NYC, with a Master's in Applied Math from Princeton. Experience in startups, fintech, traditional finance, cryptocurrency. Passionate about simplistic and ergonomic design, data integrity, and computer programming.
+Backend Software Engineer in NY area, with a Master's in Applied Math from Princeton. Experience in startups, fintech, traditional finance, cryptocurrency. Passionate about simplistic and ergonomic design, data integrity, and computer programming.
 
 %Experience
 \section{Work Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Fractal Protocol; Backend Engineer} & \hfill New York NY; Oct 2023 - Present \\[3.75pt]
+\textbf{August Digital; Backend Engineer} & \hfill New York NY; Oct 2023 - Present \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
         \item[--] Developed internal price aggregation model for all cryptocurrency assets (Python).
-        \item[--] Write core financial metrics for client positions, including risk monitoring, PnL, health factor.
+        \item[--] Wrote JWT authentication for username+password and public/private key sign-ins.
+        \item[--] Design, communicate and implement backend RESTful API.
+        \item[--] Setup PostgreSQL DB on Amazon AWS, implement ORM bindings.
+        \item[--] Wrote internal command-line tools for managing users, permissions, database, and more.
     \end{itemize}
     \end{minipage}
 }
@@ -163,7 +166,7 @@ Backend Engineer for seed-stage startup in NYC, with a Master's in Applied Math 
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Block Renovation; Prototyping Engineer} & \hfill Brooklyn NY; Jul 2020 -  Aug 2021 \\[3.75pt]
+\textbf{Block Renovation; Operations Engineer} & \hfill Brooklyn NY; Jul 2020 -  Aug 2021 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -186,7 +189,7 @@ Backend Engineer for seed-stage startup in NYC, with a Master's in Applied Math 
 \end{tabularx}
 
 Awards: Cum laude, Tau Beta Pi Eng Honor Society, Sigma Xi Outstanding Undergraduate Thesis. \\
-Courses: Analysis of Big Data, Machine Learning, Computational Finance in C++, Data Structures and Algorithms, Monte-Carlo Simulation, Linear and Convex Optimization, etc.
+Courses: Data Structures and Algorithms, Machine Learning, Analysis of Big Data, Computational Finance in C++, Monte-Carlo Simulation, Linear and Convex Optimization, etc.
 
 %Projects
 
@@ -194,11 +197,6 @@ Courses: Analysis of Big Data, Machine Learning, Computational Finance in C++, D
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{KVS: A Distributed Key-value store written in Rust} & \hfill 2023; \href{https://github.com/cjeva10/kvs}{GitHub} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{In-memory key-value database, sequential log storage \& compaction. Implemented Redis Serialization Protocol from scratch, client-server communication over TCP. Raft in Rust + integration in-progress. }  \\
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Ethereum DeFi Price Library (Rust + Python)} & \hfill 2023 \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{Library to extract data from Ethereum archive node, written in Rust. Implementation of historical data queries, block info, account balances, prices, and more. MySQL wrappers to store data locally, as well as Yahoo! Finance stock data to analyze price correlations. }  \\
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
@@ -211,8 +209,8 @@ Courses: Analysis of Big Data, Machine Learning, Computational Finance in C++, D
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{} X@{} X@{} @{}l}
-Python & NumPy/Pandas & Jupyter Lab & SQL & Rust \\
-R & Solidity/Vyper & Excel & Retool & JavaScript  \\
+Python & AWS & PostgreSQL & MongoDB & Rust \\
+REST & R & Excel & Retool & JavaScript  \\
 \end{tabularx}
 
 \vfill
