--- a/cv.tex
+++ b/cv.tex
@@ -139,15 +139,15 @@ Backend Software Engineer in NY area, with a Master's in Applied Math from Princ
 \section{Work Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{August Digital; Backend Engineer} & \hfill New York NY; Oct 2023 - Present \\[3.75pt]
+\textbf{August Digital; Backend Software Engineer} & \hfill New York NY; Oct 2023 - Present \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[--] Primary developer and contributor for backend RESTful API.
         \item[--] Developed internal price aggregation model for all cryptocurrency assets (Python).
-        \item[--] Wrote JWT authentication for username+password and public/private key sign-ins.
-        \item[--] Design, communicate and implement backend RESTful API.
-        \item[--] Setup PostgreSQL DB on Amazon AWS, implement ORM bindings.
-        \item[--] Wrote internal command-line tools for managing users, permissions, database, and more.
+        \item[--] Write JWT authentication for username+password and public/private key sign-ins.
+        \item[--] Initiate PostgreSQL DB on Amazon AWS, implement table layout, migrations, relationships.
+        \item[--] Build internal tools (CLI + Retool) for managing users, permissions, database.
     \end{itemize}
     \end{minipage}
 }
@@ -209,8 +209,8 @@ Courses: Data Structures and Algorithms, Machine Learning, Analysis of Big Data,
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{} X@{} X@{} @{}l}
-Python & AWS & PostgreSQL & MongoDB & Rust \\
-REST & R & Excel & Retool & JavaScript  \\
+Python & AWS & PostgreSQL & MongoDB & REST \\
+Retool & Golang & Rust & Git & Linux \\
 \end{tabularx}
 
 \vfill
