--- a/cv.tex
+++ b/cv.tex
@@ -133,7 +133,7 @@
 
 %Interests/ Keywords/ Summary
 \section{Summary}
-Backend Software Engineer in NY area, with a Master's in Applied Math from Princeton. Experience in startups, fintech, traditional finance, cryptocurrency. Passionate about simplistic and ergonomic design, data integrity, and computer programming.
+Backend Software Engineer with a Master's in Applied Math from Princeton. Experience in startups, Decentralized Finance, and cryptocurrency.
 
 %Experience
 \section{Work Experience}
@@ -144,9 +144,9 @@ Backend Software Engineer in NY area, with a Master's in Applied Math from Princ
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
         \item[--] Primary developer and contributor for backend RESTful API.
+        \item[--] Write metrics + execution pipelines for DeFi protocol integrations.
         \item[--] Developed internal price aggregation model for all cryptocurrency assets (Python).
-        \item[--] Write JWT authentication for username+password and public/private key sign-ins.
-        \item[--] Initiate PostgreSQL DB on Amazon AWS, implement table layout, migrations, relationships.
+        \item[--] Deploy PostgreSQL DB on Amazon AWS, implement table layout, migrations, relationships.
         \item[--] Build internal tools (CLI + Retool) for managing users, permissions, database.
     \end{itemize}
     \end{minipage}
@@ -209,8 +209,8 @@ Courses: Data Structures and Algorithms, Machine Learning, Analysis of Big Data,
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{} X@{} X@{} @{}l}
-Python & AWS & PostgreSQL & MongoDB & REST \\
-Retool & Golang & Rust & Git & Linux \\
+Python & Web3 & AWS & PostgreSQL & MongoDB \\
+REST & Golang & Rust & Git & Linux \\
 \end{tabularx}
 
 \vfill
